<resources>
    <string name="app_name">EternalReturnInfo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_tab_main_title">메인</string>
    <string name="main_tab_walkthrough_title">공략</string>
    <string name="main_tab_search_duo">듀오</string>
    <string name="main_tab_my_profile">프로필</string>
    <string name="main_tab_board_title">게시판</string>
    <string name="main_tab_chat_title">채팅</string>
    <string name="main_game_boardcast">게임 방송</string>
    <string name="main_tab_search_title">전적검색</string>
    <string name="main_see_more">더보기</string>
    <string name="main_notice">공지</string>
    <string name="board_save">등록</string>
    <string name="board_comment">댓글</string>
    <string name="board_title_message">제목을 입력해주세요</string>
    <string name="board_content_message">내용을 입력해주세요</string>
    <string name="board_post_add">게시글 작성</string>
    <string name="board_post_finish">작성 완료</string>
    <string name="board_post">게시글</string>
    <string name="board_search">검색</string>
    <string name="board_deleted_message">해당 게시글이 삭제되었습니다.</string>
    <string name="board_ok">확인</string>
    <string name="chat_enter_msg">메시지를 입력하세요.</string>
    <string name="chat_send">전 송</string>
    <string name="chatlist_user_name">장재용</string>
    <string name="chat_list_chat_tv">채팅</string>
    <string name="chat_list_item_msg">근태님 버스 감사합니다.. 저도 나딘만 팔까봐요 ㅎㅎ..</string>
    <string name="chat_list_item_date">하루 전</string>
    <string name="chat_list_item_name">장재용</string>
    <string name="News">새소식</string>
    <string name="Announcement">공지사항</string>
    <string name="Patch_notes">패치노트</string>
    <string name="Event">이벤트</string>
    서버 티어 성별 선호실험체
    <string-array name="server">
        <item>KR</item>
        <item>EU</item>
    </string-array>

    <string-array name="tier">
        <item>Bronze</item>
        <item>Silver</item>
        <item>Gold</item>
        <item>Platinum</item>
        <item>Diamond</item>
    </string-array>

    <string-array name="gender">
        <item>남자</item>
        <item>여자</item>
    </string-array>

    <string-array name="most">
        <item>쇼우</item>
        <item>쇼이치</item>
        <item>헤이즈</item>
    </string-array>
    <string name="menu_sign_up">회원가입</string>
    <string name="log_out_toast">로그아웃</string>
    <string name="chat_list_msg">최근에 대화한 내용이 없습니다.</string>
    <string name="chat_item_receiver_msg">받는 메시지</string>
    <string name="chat_item_receiver_date">2023-01-12 14시 51분</string>
    <string name="dialog_sign_in_email_hint">email</string>
    <string name="dialog_sign_in_password_hint">password</string>
    <string name="dialog_sign_in_for_text_id">jaeyong@gmail.com</string>
    <string name="login_googlelogin_serverid">48907367773-37le51fs370ruk8eirjkmi11k6qmg30k.apps.googleusercontent.com</string>
    <string name="login_lostpw_success">로 재설정 이메일을 보냈습니다.</string>
    <string name="login_lostpw_fail">존재하지 않는 이메일 입니다.</string>
    <string name="DB_collection">EternalReturnInfo</string>
    <string name="login_fail_null">이메일과 비밀번호를 입력하세요.</string>
    <string name="login_success">로그인 완료</string>
    <string name="signup_success">계정 생성 완료</string>
    <string name="signup_fail">계정 생성 실패</string>
    <string name="signup_fail_pw">동일한 비밀번호를 입력하세요.</string>
    <string name="signup_fail_null">회원가입 정보를 전부 입력하세요</string>
    <string name="signup_firebase_success">회원정보 저장 성공</string>
    <string name="signup_firebase_fail">회원정보 저장 실패</string>
    <string name="signup_fail_profile">프로필 사진을 선택하세요.</string>
    <string name="login_fail">이메일과 비밀번호를 확인하세요</string>
    <string name="login_lostpw_null">이메일을 입력하세요</string>
    <string name="chat_item_time">2023-01-12 14시 51분</string>
    <string name="chat_item_readOrNot">1</string>
    <string name="chat_item_msg">받는 메시지</string>
</resources>