<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/dialog_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sign_in_for_text_id"
            android:ems="10"
            android:hint="@string/dialog_sign_in_email_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/dialog_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dialog_sign_in_password_hint"
            android:inputType="textPassword" />

    </LinearLayout>
</LinearLayout>