<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/chat_item_sender_container"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/chat_item_sender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/sender_background"
        android:maxWidth="250dp"
        android:padding="10dp"
        android:text="@string/chat_item_msg"
        android:textSize="17sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chat_item_sender_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/chat_item_time"
        android:textColor="@color/grey"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_item_sender_text" />

    <TextView
        android:id="@+id/chat_item_sender_read_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/chat_item_readOrNot"
        android:textColor="@color/highlight_color"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/chat_item_sender_text"
        app:layout_constraintEnd_toStartOf="@+id/chat_item_sender_text"
        app:layout_constraintTop_toTopOf="@+id/chat_item_sender_text" />

</androidx.constraintlayout.widget.ConstraintLayout>