<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:id="@+id/chat_list_container">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/chat_list_profile_picture"
        android:layout_width="73dp"
        android:layout_height="93dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/chat_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/chat_list_item_name"
        app:layout_constraintStart_toEndOf="@id/chat_list_profile_picture"
        app:layout_constraintTop_toTopOf="@id/chat_list_profile_picture" />

    <TextView
        android:id="@+id/chat_list_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_list_item_date"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/chat_list_name"
        app:layout_constraintBottom_toBottomOf="@+id/chat_list_name"
        app:layout_constraintStart_toEndOf="@+id/chat_list_name" />

    <TextView
        android:id="@+id/chat_list_msg"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:singleLine="true"
        android:text="@string/chat_list_item_msg"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/chat_list_profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/chat_list_name" />
</androidx.constraintlayout.widget.ConstraintLayout>