<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">


    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="225dp"
        android:layout_height="79dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_white_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_profile_btn"
        android:layout_width="80dp"
        android:layout_height="80dp"

        android:layout_marginTop="16dp"

        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_xiuk"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_news_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:background="@drawable/shape_gray_btn"

        android:text="@string/News"
        app:layout_constraintEnd_toStartOf="@+id/main_announcement_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_logo" />

    <Button
        android:id="@+id/main_announcement_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:background="@drawable/shape_highlight_btn"

        android:text="@string/Announcement"
        app:layout_constraintEnd_toStartOf="@+id/main_patch_notes_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_news_btn"
        app:layout_constraintTop_toBottomOf="@+id/main_logo" />

    <Button
        android:id="@+id/main_patch_notes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:background="@drawable/shape_gray_btn"

        android:text="@string/Patch_notes"
        app:layout_constraintEnd_toStartOf="@+id/main_event_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_announcement_btn"
        app:layout_constraintTop_toBottomOf="@+id/main_logo" />

    <Button
        android:id="@+id/main_event_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="29dp"
        android:background="@drawable/shape_gray_btn"

        android:text="@string/Event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_patch_notes_btn"
        app:layout_constraintTop_toBottomOf="@+id/main_profile_btn" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="20dp"

        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:text="듀오 찾기 어필 부분"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_news_btn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


</androidx.constraintlayout.widget.ConstraintLayout>